<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:text="@string/activity_title"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.DialogWindowTitle"
        android:typeface="sans"
        app:fontFamily="@font/raleway_medium" />

    <Button
        android:id="@+id/english"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:text="@string/switch_english" />

    <Button
        android:id="@+id/spanish"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/english"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/switch_spanish" />

    <Button
        android:id="@+id/russian"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spanish"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/switch_russian" />

    <Button
        android:id="@+id/default_language"
        style="@android:style/Widget.Holo.Light.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/russian"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/switch_default" />

    <TextView
        android:id="@+id/current_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/current_language" />
</RelativeLayout>